samples/_failures_safe/1761325032_52cf5a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a3eb3d7.c: In function ‘main’:
./samples/SAFE/__tmp_8a3eb3d7.c:165:16: error: missing terminating " character
  165 |         printf("Compression/decompression verification failed.\
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8a3eb3d7.c:165:9: error: expected expression at end of input
  165 |         printf("Compression/decompression verification failed.\
      |         ^~~~~~
./samples/SAFE/__tmp_8a3eb3d7.c:165:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8a3eb3d7.c:165:9: error: expected declaration or statement at end of input
